Fix tags on landing page, don overflow pre in ff

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -71,7 +71,9 @@ h2:hover >.headerlink {
 }
 
 
-
+section > pre {
+    width: calc(100% - 30px)
+}
 
 
 /* Global */
